ci: add Windows PowerShell CI helper and ci:windows script

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "e2e": "npm run build:circuit && npm run setup:zkey && npm run export:verifier && npm run deploy:local"
   ,"ci:local": "bash ./ci/run_e2e.sh"
   ,"ci:docker": "docker run --rm -v \"$PWD:/work\" -w /work node:18-bullseye bash -lc \"npm ci && chmod +x ci/run_e2e.sh && ./ci/run_e2e.sh\""
+  ,"ci:windows": "powershell -ExecutionPolicy Bypass -File ./ci/run_e2e.ps1"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
