--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Install deps
         run: npm ci
       - name: Compile circom circuit (Docker)
-  run: docker run --rm -v ${{ github.workspace }}:/work -w /work iden3/circom:latest circom circuits/square.circom --r1cs --wasm --sym -o circuits/build
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/work -w /work iden3/circom:latest \
+            circom circuits/square.circom --r1cs --wasm --sym -o circuits/build
       - name: Setup zkey and export verifier
         run: |
           npm run setup:zkey
